<resources>
    <string name="app_name">TravelerReviewApp</string>
    <string name="tour_review_title">Berlin Tempelhof Airport: The Legend of Tempelhof</string>
    <string name="action_settings">Settings</string>
    <string name="author_name">Reviewed by</string>
    <string name="empty">-</string>
    <string name="review_message">Review:</string>
    <string name="rating">Rating:</string>
    <string name="country">Country:</string>
    <string name="title">Title:</string>
    <string name="enjoyment">Enjoyment:</string>
    <string name="type">Traveler type:</string>
    <string name="city">City:</string>
    <string name="photo">photo</string>
    <string name="rating_value">%1$.2f/5</string>
    <string name="total_reviews_value">%1$s reviews</string>
</resources>
