<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools">

    <data class="ReviewDetailsBinding" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <ImageView
                    android:id="@+id/author_photo"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/photo"
                    android:padding="4dp"
                    android:scaleType="centerCrop"
                    android:visibility="gone" />

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/author_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/author_name"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/author_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="Luke Walker" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/city_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/city"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/city_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="Kiel" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/country_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/country"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/country_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="Germany" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/title_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/title"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/title_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="Some random title" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/review_message"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/review_message"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/review_message_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="The tour is very interesting and comprehensive and lets you get inside restricted areas of the now empty Airport. Our guide was very knowledgable and we got to see different parts of this very interesting building and to learn a lot about its rich history through ime." />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/enjoyment_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/enjoyment"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/enjoyment_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="Some random value" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/traveler_type_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:text="@string/type"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />

                <TextView
                        android:id="@+id/traveler_type_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        android:gravity="center"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold"
                        tools:text="Some random value" />

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/margin_8dp">

                <TextView
                        android:id="@+id/reviewed_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/margin_5dp"
                        tools:text="28 April, 2017"
                        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                        android:textSize="@dimen/text_size_16sp"
                        android:textStyle="bold" />
            </LinearLayout>

            <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:id="@+id/details_rating_stars"
                    style="@style/Widget.MaterialRatingBar.RatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_5dp"
                    android:isIndicator="true"
                    android:maxHeight="@dimen/height_55dp" />
        </LinearLayout>

    </ScrollView>

</layout>